--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,7 @@
-anyio==3.5.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.5.0
-asyncpg==0.25.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.10
-click==8.0.3
-docker==5.0.3
-fastapi==0.73.0
-greenlet==1.1.2
-gunicorn==20.1.0
-h11==0.13.0
-idna==3.3
-pycparser==2.21
-pydantic==1.9.0
-requests==2.27.1
-sniffio==1.2.0
-SQLAlchemy==1.4.31
-starlette==0.17.1
-typing-extensions==4.0.1
-urllib3==1.26.8
-uvicorn==0.17.1
-websocket-client==1.2.3
+docker~=5.0.3
+uvicorn~=0.17.4
+pydantic~=1.9.0
+sqlalchemy~=1.4.31
+psycopg2
+fastapi~=0.73.0
+argon2-cffi
