--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-docker~=5.0.3
-uvicorn~=0.17.4
-pydantic~=1.9.0
-sqlalchemy~=1.4.31
+docker
+uvicorn
+pydantic
+sqlalchemy
 psycopg2
-fastapi~=0.73.0
+fastapi
 argon2-cffi
 python-multipart
+starlette
